CSS/home.css
main {
    display: grid;
    grid-template-columns: 0.5fr 50%;
    grid-template-areas: "left right";
    align-items: center;
    width: 100%;
    padding: 20px 5%;
    background-color: #2d32af;
}
#ig-main-left{
    display: grid;
    grid-area: left;
    grid-gap: 30px;
    align-items: center;
}
.ig-main-right-logo{
    height: 350px;
}
.ig-main-left-text-container{
    align-items: center;
    color: white;
}
#ig-main-left-trailer{
    display: flex;
    align-items: center;
    justify-content: center;
}
#ig-main-left-trailer:hover{
    cursor: pointer;
    text-decoration: underline;
} 
#ig-icons > a > svg:hover{
    cursor: pointer;
    opacity: 0.8;
}
#ig-icons {
    margin-top: 10px;
}
#ig-icons > a{
    text-decoration: none;
}
#ig-icons > a > svg{
	color: white;
	margin-right: 1.1875%;
	margin-left: 1.1875%;
    transition: opacity .2s ease-in;
}
.ig-content{
    display: grid;
}
.episode, .episode-first {
    display: grid;
    align-items: center;
    grid-template-columns: 50px auto;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
	overflow: hidden;
}
.episode {
    border-top: blue solid 1px;
}
.player > svg {
    font-size: 32px;
}
.player > svg:hover{
    cursor: pointer;
}
.season-title{
    color: red;
    width: 100%;
    border-bottom: solid red;
    margin-bottom: 0;
}
.episode-title {
    color: #2d32af;
    font-size: 1.3rem;
    margin-bottom: 0;
    margin-top: 0;
}
.ep-description {
    color: #2d32af;
    margin-top: 5px;
    margin-bottom: 5px;
}
#ig-content-rank{
    margin-left: 5%;
    height: 100%;
    color: #2d32af;
    display: none;
}
#ig-content-rank-game-overall{
    color: red;
}
.progress-background{
    background-color: #f1f1f1;
    width: 100%;
    border-radius: 4px;
}
.progress-foreground{
    height: 33px;
    background-color: #2d32af;
    border-radius: 4px;
}
#ig-content-rank-progress-overall{
    background-color: red;
}
/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    main{
        display: block;
        text-align: center;
        padding-bottom: 7%;
        padding-top: 2%;
    }
	#episodes {
        width: 100%;
        margin-top: 5%;
	}
	#ig-content-rank {
		display: none;
	}
    .ig-content{
        padding-left: 5%;
        padding-right: 5%;
        grid-template-columns: 100%;
    }
    #ig-main-right{
        display: block;
    }
    #ig-main-left{
        width: 100%;
        grid-gap: 25px;
        grid-template-columns: 100%;
        justify-content: center;
    }
    .ig-main-right-logo{
        height: auto;
        width: 65%;
        border-radius: 4px;
    }
    #ig-icons{
        display: none;
    }
    .ig-main-left-text-container > h1{
        display: none;
    }
    .ig-main-left-text-container > p{
        margin-bottom: 0;
        margin-top: 25px;
        padding-left: 3%;
        padding-right: 3%;
    }
    #ig-main-left-trailer{
        color: #2d32af;
        padding: 10px;
        border-radius: 6px;
        background-color: white;
        justify-self: center;
    }
    #ig-main-left-trailer > svg{
        margin-right: 7px;
        font-size: 25px;
        color: red;
    }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    main{
        grid-template-columns: 50% 50%;
        height: 500px;
    }
    #ig-main-right{
        text-align: center;
    }
    .ig-main-right-logo{
        height: 300px;
        border-radius: 6px;
    }
	#episodes {
        width: 100%;
	}
	#ig-content-rank {
		display: none;
	}
    .player > svg {
		font-size: 32px;
    }
    .ig-content{
        padding: 50px 5%;
    }
    #ig-icons > a > svg{
        font-size: 23px;
    }
    #ig-main-left{
        align-self: center;
    }
    .ig-main-left-text-container > h1{
        font-size: 30px;
        /* transition: 0.1s font-size linear; */
        margin-bottom: 5px;
        margin-top: 0;
    }
    .ig-main-left-text-container > p{
        margin: 0;
	    margin-top: 10px;
        font-size: 16px;
        /* transition: 0.1s font-size linear; */
    }
    #ig-main-left-trailer{
        width: 225px;
        color: #2d32af;
        font-size: 16px;
        padding: 10px;
        border-radius: 6px;
        background-color: white;
        /* transition: width 0.1s linear; */
    }
    #ig-main-left-trailer > svg{
        margin-right: 11px;
        font-size: 27px;
        color: red;
    }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .ig-main-left-text-container > h1{
        font-size: 35px;
    }
    .ig-main-left-text-container > p{
        font-size: 16px;
    }
} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
    main{
        grid-template-columns: minmax(min-content,50%) 50%;
    }
    .ig-content{
        grid-template-columns: 50% 50%;
        grid-template-rows: 90vh;
    }
    #episodes {
        overflow-y: scroll;
        overflow-x: hidden;
        padding-right: 2%;
    }
    /* width */
    #episodes::-webkit-scrollbar {
        width: 10px;
    }
    /* Track */
    #episodes::-webkit-scrollbar-track {
        background: #f1f1f1;
        border-radius: 30px;
    }
    /* Handle */
    #episodes::-webkit-scrollbar-thumb {
        background: red;
        border-radius: 30px;
    }
    .episode:hover,.episode-first:hover{
        background: #f1f1f1;
    }
	#ig-content-rank {
		display: none;
	}
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    .ig-main-right-logo{
        height: 375px;
    }
    #ig-icons > a > svg{
        font-size: 27px;
    }
    .ig-main-left-text-container > h1{
        font-size: 50px;
    }
    .ig-main-left-text-container > p{
        font-size: 23px;
    }
    #ig-main-left-trailer{
        width: 276px;
        font-size: 23px;
    }
    #ig-main-left-trailer > svg{
        font-size: 30px;
    }
}

